fixed usability issues
